--- a/_drafts/2014-11-10-version-021.md
+++ b/_drafts/2014-11-10-version-021.md
@@ -7,7 +7,7 @@ date:   2014-11-25 10:00:00
 categories: news
 ---
 
-Following our recent initial release, we released version 0.2.1 today. This release includes a quite a big number of bug fixes; however, the most import changes are:
+Following our recent initial release, we released version 0.2.1 today. This release includes mainly [bug fixes](https://github.com/ExCiteS/geokey/issues?q=is%3Aissue+milestone%3A0.2.1+is%3Aclosed) as well as some changes and smaller new features.
 
 - The biggest improvement is how you can report contributions. You can now flag a comment to a contribution with `"review_status": "open"` and the contribution's status will be changed to `review`. After resolving the problem, moderators can update the comment with `"review_status": "resolved"` and the contribution will be marked with `"status": "active"` again.
 - On a list view, contributions now provide a `display_field` property. This property provides the field key of the first field of the contribution's category and the contribution's value of that field. You can use it to display contributions in list form.
@@ -16,4 +16,4 @@ Following our recent initial release, we released version 0.2.1 today. This rele
 - Users are now able to revoke access to selected OAuth apps.
 - We added a `Vagrantfile` that you can use to [setup a testenvironment on your machine](/help/vagrant.html).
 
-Give the new version go on our [test server](http://play.geokey.org.uk/) and [let us know](https://twitter.com/geokey_project) what you think. 
+Give the new version go on our [test server](http://play.geokey.org.uk/) and [let us know](https://twitter.com/geokey_project) what you think.
