--- a/_posts/2014-11-10-version-021.md
+++ b/_posts/2014-11-10-version-021.md
@@ -7,13 +7,13 @@ date:   2014-11-25 10:00:00
 categories: news
 ---
 
-Following our recent initial release, we released version 0.2.1 today. This release includes mainly [bug fixes](https://github.com/ExCiteS/geokey/issues?q=is%3Aissue+milestone%3A0.2.1+is%3Aclosed) as well as some changes and smaller new features.
+Following our recent initial announcement, we released version 0.2.1 today. This release includes mainly [bug fixes](https://github.com/ExCiteS/geokey/issues?q=is%3Aissue+milestone%3A0.2.1+is%3Aclosed) as well as some changes and smaller new features.
 
 - The biggest improvement is how you can report contributions. You can now flag a comment to a contribution with `"review_status": "open"` and the contribution's status will be changed to `review`. After resolving the problem, moderators can update the comment with `"review_status": "resolved"` and the contribution will be marked with `"status": "active"` again.
 - On a list view, contributions now provide a `display_field` property. This property provides the field key of the first field of the contribution's category and the contribution's value of that field. You can use it to display contributions in list form.
 - Improved search: There was a bug that returned contributions when one of the field keys matched the query. This has now been fixed.
-- Security: One of the dependencies has been updated to a newer version to fix a security issue. Make sure to update the dependencies.
 - Users are now able to revoke access to selected OAuth apps.
 - We added a `Vagrantfile` that you can use to [setup a testenvironment on your machine](/help/vagrant.html).
+- We update all dependencies that don't break any functionality. This includes a security fix with Django REST Framework.
 
 Give the new version go on our [test server](http://play.geokey.org.uk/) and [let us know](https://twitter.com/geokey_project) what you think.
