--- a/_drafts/2015-02-04-version-03.md
+++ b/_drafts/2015-02-04-version-03.md
@@ -7,9 +7,19 @@ date:   2015-02-04 10:00:00
 categories: news
 ---
 
+We are happy to announce the first release of 2015 today. Besides lots of bug fixes this release brings a lot of new features.
+
+- We upgraded GeoKey to Django 1.7. This improves performance, stability and security. Unfortunately, the update is not straightforward, but we've have compiled all necessary information in this post.
+- Along with the major update, we had to switch our OAuth library to [oauth-toolkit](https://github.com/evonove/django-oauth-toolkit). This, unfortunately requires to register your application again to obtain a new Client ID and Client Secret.
+- We have build the basis for you to easily add functionality to GeoKey using custom extensions. We will explain in a different post how to create and register extensions with GeoKey.
+- Super users of the system are now able to add and remove more super users as well as manage all projects in GeoKey.
+- Two new data types were added for category fields: Date and Time.
+- A new API endpoint (`/api/user/`) has been implemented to [register users](/docs/user-register.html) and to [get](/docs/user-get-info.html) and [update](/docs/user-update.html) their information.
+- In public projects you will now be able restrict contributions to all users, that have authenticated with the system.
+
 ## How to update
 
-We updated the dependencies to the latest versions, so updating requires a bit fiddling.
+As mentioned before, updating requires a bit of work this time. But we have compiled all necessary here.
 
 First update the dependencies:
 
@@ -17,23 +27,28 @@ First update the dependencies:
 sudo pip install -U -r requirements.txt
 ```
 
-Django 1.7.x does not require South for database migrations any longer. Therefore, we need to migrate the database to the Django's native migrations.
+Django 1.7.x does not require South for database migrations any longer. Therefore, we need to migrate the database to Django's native migrations.
 
 ```
 pyhton manage.py migrate
 ```
 
-(Fake migrations are required for a number of packages)
+You will receive error messages when migrating. Therefore, you need to run the following commands in the correct order.
 
 ```
 python manage.py migrate categories 0002_auto_20150106_1338 --fake
+pyhton manage.py migrate
 python manage.py migrate contributions 0002_auto_20150106_1338 --fake
+pyhton manage.py migrate
 python manage.py migrate datagroupings --fake
+pyhton manage.py migrate
 python manage.py migrate easy_thumbnails --fake
+pyhton manage.py migrate
 python manage.py migrate projects 0002_auto_20150106_1338 --fake
+pyhton manage.py migrate
 ```
 
-Add `extentsions` and `superusertools` to installed apps:
+Add `extentsions` and `superusertools` to installed apps in `core/settings/project.py`:
 
 ```
 INSTALLED_APPS += (
@@ -43,15 +58,10 @@ INSTALLED_APPS += (
     )
 ```
 
-Copy the exension urls file:
+Finally, copy the extension urls file. This file is required to register API endpoints of extensions, you might want to install later.
 
 ```
 cp core/url/extensions.sample.py core/url/extension.py
 ```
 
-
-
-We updateted the OAuth library to oauth-toolkit. Apps will be removed
-
-
-Get/update user information
+That's it. You should be able to use GeoKey 0.3 now.
