Adds changes to contribution API

--- a/_drafts/2015-06-12-version-04.md
+++ b/_drafts/2015-06-12-version-04.md
@@ -1,2 +1,6 @@
 - maxlength for textfields
 - textarea
+- enhances user auth stuff
+- new JSONB stuff
+    - changed contribution serialization
+    - update database to PG 9.4
