Some little mistake fixes

--- a/_posts/2015-04-01-version-04.md
+++ b/_posts/2015-04-01-version-04.md
@@ -26,7 +26,7 @@ However, we introduced some minor changes to features.
     git checkout stable/0.4.x
     ```
 
-2. Update the dependecies:
+2. Update the dependecies
 
     ```
     pip install -U -r requirements.txt
@@ -62,5 +62,5 @@ However, we introduced some minor changes to features.
 
 For the next release we are planning two bigger changes:
 
-- We'll provide a Pypi package, which will make installing and updating GeoKey at lot easier.
-- We also switch from hstore to jsonb, which will make querying data more efficient
+- We'll provide a Pypi package, which will make installing and updating GeoKey a lot easier.
+- We also switch from hstore to jsonb, which will make querying data more efficient.
