Update install instructions

--- a/_posts/2015-07-27-version-06.md
+++ b/_posts/2015-07-27-version-06.md
@@ -39,6 +39,18 @@ In addition, you have to install GDAL on your machine:
 sudo apt-get install binutils libproj-dev gdal-bin python-gdal
 ```
 
+If you're running GeoKey from a virtual env, you have to run:
+
+```
+sudo apt-get install libgdal-dev
+export C_INCLUDE_PATH=/usr/include/gdal
+export CPLUS_INCLUDE_PATH=/usr/include/gdal
+
+pip install gdal==1.9.0
+```
+
+It's important that important to install the correct bindings for installed GDAL, please check with `gdal-config --version`.
+
 ### What's next
 
 We started [laying out plans for a full 1.0 release](https://github.com/ExCiteS/geokey/issues/267), which we expect to have ready later this year. We won't add to many new features and focus on improving and simplfying GeoKey instead.
