--- a/_posts/2015-02-06-version-03.md
+++ b/_posts/2015-02-06-version-03.md
@@ -17,7 +17,7 @@ We are happy to announce the first release of 2015 today. We fixed a long list o
 - A new API endpoint (`/api/user/`) has been implemented to [register users](/docs/user-register.html) and to [get](/docs/user-get-info.html) and [update](/docs/user-update.html) their information.
 - In public projects you will now be able restrict contributions to all users, that have authenticated with the system.
 
-## How to update
+### How to update
 
 As mentioned before, updating requires a bit of work this time. But we have compiled all necessary information here. Don't forget to backup your database before you start.
 
