--- a/_posts/2015-05-15-version-05.md
+++ b/_posts/2015-05-15-version-05.md
@@ -12,7 +12,7 @@ We are happy to announce the release of version 0.5 today. Functionality-wise, t
 - GeoKey 0.5 requires Postgres 9.4. The upgrade is necessary so we can use the very latest additions to Postgres, namely JSONB data type. We switch from hstore to JSONB because it allows to store, retrieve and update contributions more efficiently.
 - We simplified installing and updating GeoKey. You can now install and update [GeoKey via PyPI](https://pypi.python.org/pypi/geokey). Have a look at the updated [install instructions](http://geokey.org.uk/help/how-to-install.html).
 
-## Changes to the API
+### Changes to the API
 
 We have made one minor change to the API. To ensure that our GeoJSON API can be consumed by a great variety of client applications, we have changed the way properties of a contribution are rendered. `properties` now only contains the data collected by the contributor, whereas the new `meta` field contains all sorts of meta information about the contribution.
 
