--- a/_posts/2015-07-27-version-06.md
+++ b/_posts/2015-07-27-version-06.md
@@ -9,25 +9,31 @@ categories: news
 
 We are happy to announce GeoKey 0.6 today. For this release, we mainly focussed on simplifying GeoKey's functionality both for project administrators and developers using our API.
 
-- We got rid of data groupings, because this was the feature that added the most complexity to our admin interfaces, data access and the API. We replace it with something much simpler: For each user group, you can now define which data its members can access.
+### Data groupings were removed
 
-    As a result we also simplified the API. Instead of three different resources for each contribution, there is now one.
+We got rid of data groupings, because this was the feature that added the most complexity to our admin interfaces, data access and the API. We replace it with something much simpler: For each user group, you can now define which data its members can access.
 
-    You can access all contributions in a project via
+As a result we also simplified the API. Instead of three different resources for each contribution, there is now one.
 
-    ```
-    GET /api/project/:project_id/contributions/
-    ```
+You can access all contributions in a project via
 
-    and a single contribution via:
+```
+GET /api/project/:project_id/contributions/
+```
 
-    ```
-    GET /api/project/:project_id/contributions/contribution_id/
-    ```
+and a single contribution via:
 
-- We will soon release a new extension to export data to various formats, such as KML, CSV or GML. That will enable you to take data from to analyse and visualise it using your tools of choice. Export to different data formats required some some internal changes to the code base, which do not affect the API works.
+```
+GET /api/project/:project_id/contributions/contribution_id/
+```
 
-- It is now possible to disable the upload of videos. In the settings, set the new flag `ENABLE_VIDEO = false` or `ENABLE_VIDEO = True` if you want to disable or enable video uploads.
+### Data exports
+
+We will soon release a new extension to export data to various formats, such as KML, CSV or GML. That will enable you to take data from to analyse and visualise it using your tools of choice. Export to different data formats required some some internal changes to the code base, which do not affect the API works.
+
+### Disabling video upload
+
+It is now possible to disable the upload of videos. In the settings, set the new flag `ENABLE_VIDEO = false` or `ENABLE_VIDEO = True` if you want to disable or enable video uploads.
 
 ### How to update
 
