Fixed broken links in earlier posts
Signed-off-by: Matthias Stevens <matthias.stevens@gmail.com>

--- a/_posts/2015-05-15-version-05.md
+++ b/_posts/2015-05-15-version-05.md
@@ -57,4 +57,4 @@ We have made one minor change to the API. To ensure that our GeoJSON API can be 
 }
 ```
 
-[Read the docs](/docs/web/contribution-response.md) for more detailed information.
+[Read the docs](/docs/web/contribution-response.html) for more detailed information.
