--- a/_posts/2015-08-21-version-07.md
+++ b/_posts/2015-08-21-version-07.md
@@ -13,13 +13,13 @@ We are happy to announce the next release of GeoKey today. This release introduc
 
 Subsets allow you to predefine views on data in a project based on a set of filters. Similar to [the way you define what data a user group can access](/help/granting-permissions-to-usergroups.html), you can select contributions based on categories or attribute values.
 
-Subsets are applied on [contributions API endpoint](http://localhost:4000/docs/web/contribution-search.html):
+Subsets are applied on [contributions API endpoint](http://geokey.org.uk/docs/web/contribution-search.html):
 
 ```
 GET /api/projects/:project_id/contributions/?subset={subset_id}
 ```
 
-The subset ID is provided via the [project details](http://localhost:4000/docs/web/project-single.html).
+The subset ID is provided via the [project details](http://geokey.org.uk/docs/web/project-single.html).
 
 Alongside implementing subsets we got rid of the separate endpoint for searching contributions. Instead, just like subsets, you can submit a search query by adding the query parameter to your request:
 
