Added improvements line about symbols + corrected formatting of last bugfix line

--- a/_posts/2016-01-29-version-09.md
+++ b/_posts/2016-01-29-version-09.md
@@ -12,9 +12,10 @@ We are happy to announce the next release of GeoKey today. This release includes
 ### Improvements
 
 - All dependencies have been upgraded, except for Django. We continue using v1.8, which is a long-term support version.
-- GeoKey extensions can now registers their version and GeoKey displays this in the admin pages (together with [Matthias](https://github.com/mstevens83))
+- GeoKey extensions can now register their version and GeoKey displays this in the admin pages (together with [Matthias](https://github.com/mstevens83))
 - [#324](https://github.com/ExCiteS/geokey/issues/324): New [Public API endpoint](http://geokey.org.uk/docs/web/core-get-info.html) to request server information (Thanks to [Matthias](https://github.com/mstevens83))
 - Added support for audio files as [documents](http://geokey.org.uk/docs/web/document-add.html) (Thanks to [Matthias](https://github.com/mstevens83))
+- Added support for map symbol images on `LookupValue` and `MultipleLookupValue`.
 
 ### Removed features
 
@@ -25,7 +26,6 @@ We are happy to announce the next release of GeoKey today. This release includes
 - [#325](https://github.com/ExCiteS/geokey/issues/325): Since upgrading to Django 1.8 the Django built-in server posted a warning about `TEMPLATE_DEBUG` (Thanks to [Matthias](https://github.com/mstevens83))
 - [#326](https://github.com/ExCiteS/geokey/issues/326): Linebreaks are not preserved in messages.html (Thanks to [Matthias](https://github.com/mstevens83))
 - [#328](https://github.com/ExCiteS/geokey/issues/328): Convert readme to rst format so pypi page looks nice
-- 
 
 ### How to update
 
