--- a/_posts/2016-01-29-version-09.md
+++ b/_posts/2016-01-29-version-09.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Version 0.9 released"
 author: Julius Osokinas
-author_link: "http://mappingforchange.org.uk/"
+author_link: "http://mappingforchange.org.uk"
 date: 2016-01-29 12:00:00
 categories: news
 ---
